Revert "fixes #35 - alignment of downloads rows incorrect"
This reverts commit 7b0420eb10c3976da059889a266bae92a61cf96e.

--- a/assets/sass/pages/_downloads.scss
+++ b/assets/sass/pages/_downloads.scss
@@ -54,7 +54,6 @@
     grid-row-gap: 1.5em;
 
     .download {
-      height: 100%;
       img {
         width: 100%;
       }
